--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 
 # Test binary, built with `go test -c`
 *.test
+server
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
@@ -14,4 +15,4 @@
 # Dependency directories (remove the comment below to include it)
 # vendor/
 *.db
-*.env
+.env
