Add more fields to example env

--- a/example.env
+++ b/example.env
@@ -1,3 +1,6 @@
-SPOTIFY_REFRESH_TOKEN=
+BACKGROUND_JOBS_ENABLED=
+DEBUG=
+DEVELOPMENT=
 SPOTIFY_REFRESH_BASIC_AUTH=
+SPOTIFY_REFRESH_TOKEN=
 TRAKT_CLIENT_ID=
