Patch up production mode

--- a/fly.toml
+++ b/fly.toml
@@ -8,7 +8,7 @@ kill_timeout = 5
 [env]
   BACKGROUND_JOBS_ENABLED = true
   DEBUG = false
-  DEVELOPMENT = false
+  # DEVELOPMENT = false Absence of this means production (will be using a better model in future)
   LOG_LEVEL = "INFO"
 
 [experimental]
