Add support for anonymous thanks

--- a/example.env
+++ b/example.env
@@ -1,6 +1,8 @@
 BACKGROUND_JOBS_ENABLED=
 DEBUG=
 DEVELOPMENT=
+PUSHOVER_APP_TOKEN=
+PUSHOVER_USER_ID=
 SPOTIFY_REFRESH_BASIC_AUTH=
 SPOTIFY_REFRESH_TOKEN=
 TRAKT_CLIENT_ID=
