Add support for currently playing videogame

--- a/example.env
+++ b/example.env
@@ -1,6 +1,8 @@
 BACKGROUND_JOBS_ENABLED=
 DEBUG=
 DEVELOPMENT=
+IGDB_ACCESS_TOKEN=
+IGDB_CLIENT_ID=
 PUSHOVER_APP_TOKEN=
 PUSHOVER_USER_ID=
 SPOTIFY_REFRESH_BASIC_AUTH=
