Add v3 playing endpoint

--- a/example.env
+++ b/example.env
@@ -4,6 +4,8 @@ DEBUG=
 DEVELOPMENT=
 IGDB_ACCESS_TOKEN=
 IGDB_CLIENT_ID=
+PLEX_TOKEN=
+PLEX_URL=
 PUSHOVER_APP_TOKEN=
 PUSHOVER_USER_ID=
 SPOTIFY_REFRESH_BASIC_AUTH=
