--- a/fly.toml
+++ b/fly.toml
@@ -37,3 +37,7 @@ kill_timeout = 5
     interval = "15s"
     restart_limit = 6
     timeout = "2s"
+
+[[mounts]]
+  source = "data"
+  destination = "/data"
