--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for gunslinger on 2023-07-10T20:47:18+12:00
+# fly.toml app configuration file generated for gunslinger on 2023-07-25T13:28:15+12:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -19,6 +19,7 @@ kill_timeout = "5s"
 [[mounts]]
   source = "data"
   destination = "/data"
+  processes = ["app"]
 
 [[services]]
   protocol = "tcp"
@@ -35,9 +36,3 @@ kill_timeout = "5s"
     type = "connections"
     hard_limit = 25
     soft_limit = 20
-
-  [[services.tcp_checks]]
-    interval = "15s"
-    timeout = "2s"
-    grace_period = "1s"
-    restart_limit = 6
