--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,5 +14,6 @@ jobs:
       - uses: actions/setup-go@v4
         with:
           go-version: 1.19
+      - run: cd v2
       - run: go mod download
       - run: go test ./...
