--- a/example.env
+++ b/example.env
@@ -1,8 +1,10 @@
 ANILIST_TOKEN=
 BACKGROUND_JOBS_ENABLED=
 DB_PATH=
+MINIFLUX_WEBHOOK_SECRET=
 PLEX_TOKEN=
 PLEX_URL=
+READWISE_TOKEN=
 STEAM_TOKEN=
 STORAGE_DIR=/tmp
 TMDB_TOKEN=
