--- a/env.sample
+++ b/env.sample
@@ -1,8 +1,14 @@
-BACKGROUND_JOBS_ENABLED=<BACKGROUND_JOBS_ENABLED>
-DB_PATH=<DB_PATH>
-PLEX_TOKEN=<PLEX_TOKEN>
-PLEX_URL=<PLEX_URL>
-STEAM_TOKEN=<STEAM_TOKEN>
-TMDB_TOKEN=<TMDB_TOKEN>
-TRAKT_BEARER_TOKEN=<TRAKT_BEARER_TOKEN>
-TRAKT_CLIENT_ID=<TRAKT_CLIENT_ID>
+ANILIST_TOKEN=
+BACKGROUND_JOBS_ENABLED=
+DB_PATH=
+PLEX_TOKEN=
+PLEX_URL=
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
+SPOTIFY_DEVICE_ID=
+SPOTIFY_USERNAME=
+STEAM_TOKEN=
+STORAGE_DIR=
+TMDB_TOKEN=
+TRAKT_BEARER_TOKEN=
+TRAKT_CLIENT_ID=
