--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          submodules: true # clone go-librespot into jobs directory
       - uses: actions/setup-go@v5
         with:
           go-version: 1.21
