--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true # clone go-librespot into jobs directory
+      # gross but go-librespot depends on them
+      - name: Ubuntu dependencies
+        run: sudo apt-get install -y portaudio vorbis ogg
       - uses: actions/setup-go@v5
         with:
           go-version: 1.21
