--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ jobs:
           submodules: true # clone go-librespot into jobs directory
       # gross but go-librespot depends on them
       - name: Ubuntu dependencies
-        run: sudo apt-get update && sudo apt-get install -y libvorbis-dev libogg-dev
+        run: sudo apt-get update && sudo apt-get install -y portaudio19-dev libvorbis-dev libogg-dev
       - uses: actions/setup-go@v5
         with:
           go-version: 1.21
