Bodge together oauth2 fallback support
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/env.sample
+++ b/env.sample
@@ -3,6 +3,8 @@ BACKGROUND_JOBS_ENABLED=
 DB_PATH=
 PLEX_TOKEN=
 PLEX_URL=
+PUSHOVER_RECIPIENT=
+PUSHOVER_TOKEN=
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 SPOTIFY_DEVICE_ID=
