--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,13 +11,11 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with:
-          submodules: true # clone go-librespot into jobs directory
-      # gross but go-librespot depends on them
+      # go-librespot dependencies
       - name: Ubuntu dependencies
         run: sudo apt-get update && sudo apt-get install -y libvorbis-dev libogg-dev
       - uses: actions/setup-go@v5
         with:
-          go-version: 1.21
+          go-version: 1.22
       - run: go mod download
       - run: go test ./...
