Upgrade to Go 1.23
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,6 @@ on:
   push:
     branches:
       - main
-env:
-  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 jobs:
   deploy:
     name: Deploy gunslinger
@@ -32,6 +30,7 @@ jobs:
           tags: |
             ghcr.io/marcus-crane/gunslinger:latest
             ghcr.io/marcus-crane/gunslinger:${{ steps.slug.outputs.sha7 }}
-      - uses: superfly/flyctl-actions@v1.4
-        with:
-          args: "deploy"
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: "flyctl deploy"
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
