Update env sample
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/env.sample
+++ b/env.sample
@@ -1,16 +1,23 @@
 ANILIST_TOKEN=
 BACKGROUND_JOBS_ENABLED=
 DB_PATH=
+LOG_LEVEL=
 PLEX_TOKEN=
 PLEX_URL=
 PUSHOVER_RECIPIENT=
 PUSHOVER_TOKEN=
+READWISE_TOKEN=
+RETROACHIEVEMENTS_USERNAME=
+RETROACHIEVEMENTS_TOKEN=
+SPOTIFY_CONNECT_PLAYER_NAME=
 SPOTIFY_CLIENT_ID=
 SPOTIFY_CLIENT_SECRET=
 SPOTIFY_DEVICE_ID=
+SPOTIFY_REDIRECT_URI=
 SPOTIFY_USERNAME=
 STEAM_TOKEN=
 STORAGE_DIR=
+SUPER_SECRET_TOKEN=
 TMDB_TOKEN=
 TRAKT_BEARER_TOKEN=
 TRAKT_CLIENT_ID=
