Store refresh tokens in DB + authenticate with Trakt
Signed-off-by: Marcus Crane <marcus@utf9k.net>

--- a/env.sample
+++ b/env.sample
@@ -21,5 +21,6 @@ STEAM_TOKEN=
 STORAGE_DIR=
 SUPER_SECRET_TOKEN=
 TMDB_TOKEN=
-TRAKT_BEARER_TOKEN=
 TRAKT_CLIENT_ID=
+TRAKT_CLIENT_SECRET=
+TRAKT_REDIRECT_URI=
